--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,9 @@
     <load ="partials/menu.html" />
     <main>
       <load ="partials/hero.html" />
-      <load ="partials/about.html" />
-      <load ="partials/clients.html" />
-      <load ="partials/process.html" />
+      <load ="partials/features.html" />
+      <load ="partials/services.html" />
+      <load ="partials/works.html" />
       <load ="partials/testimonials.html" />
       <load ="partials/pricing.html" />
       <load ="partials/contact.html" />
