Add studies, testimonials, faq and contact sections

--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,9 @@
       <load ="partials/features.html" />
       <load ="partials/services.html" />
       <load ="partials/works.html" />
+      <load ="partials/studies.html" />
       <load ="partials/testimonials.html" />
-      <load ="partials/pricing.html" />
+      <load ="partials/faq.html" />
       <load ="partials/contact.html" />
     </main>
     <load ="partials/footer.html" />
